# LearnFastPrinting

./: main.py  pyproject.toml
src/: keys.py
