[tool.poetry]
name = "learn-fast-printing"
version = "0.1.0"
description = ""
authors = ["kunansy <kolobov.kirill@list.ru>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "~0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
